--- a/css/print.css
+++ b/css/print.css
@@ -51,7 +51,11 @@ ul.plain.pad {
 }
 
 .row > div + div {
-  margin-left: 10pt;
+  margin-left: 8pt;
+}
+
+.schools li {
+  white-space: nowrap;
 }
 
 #contact, #info {
