--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,27 @@ body {
   font-family: Lato, sans-serif;
   font-size: 10pt;
   font-weight: 300;
+  text-rendering: geometricPrecision;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
-  margin: 0;
+}
+
+h2 {
+  color: #888;
+}
+
+.gray {
+  color: #888;
 }
 
 h3 {
   font-weight: 500;
+}
+
+h3:first-child {
+  margin-top: 0;
 }
 
 p, ul {
@@ -32,9 +44,19 @@ hr {
   border-top: 1px solid lightgray;
 }
 
+.lightgray {
+  color: lightgray;
+}
+
 ul.plain {
   list-style: none;
   padding-left: 0;
+}
+
+ul.compact {
+  list-style: none;
+  padding-left: 0;
+  padding-right: 1rem;
 }
 
 .light { font-weight: 300; }
@@ -47,12 +69,10 @@ ul.plain {
 
 .bump {
   display: block;
-  margin-top: 0.5em;
 }
 
 .subtitle {
   display: block;
-  margin-top: 0.1em;
 }
 
 .row {
@@ -64,6 +84,10 @@ ul.plain {
   flex-grow: 1;
 }
 
+.columns ul {
+  margin-bottom: 0;
+}
+
 #about {
   display: flex;
   flex-direction: row;
@@ -72,6 +96,7 @@ ul.plain {
 
 #name {
   flex-grow: 1;
+  margin: 0;
 }
 
 #info {
